AppService-FrontDoor-PrivateEndpoints/k8s/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: dotnet-pe-tester-policy
spec:
  podSelector:
    matchLabels:
      app: dotnet-pe-tester  
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - {}
  egress:
  - {}
